--- a/client/src/index.css
+++ b/client/src/index.css
@@ -60,8 +60,7 @@ body {
 }
 
 .header {
-  /* display: flex; */
-  /* justify-content: center; */
+  padding-left: 20px;
 }
 
 #login {
@@ -77,6 +76,7 @@ body {
   border-radius: 10px;
   width: 10rem;
   height: 1.25rem;
+  font-size: 15px;
 }
 
 #signup {
@@ -93,30 +93,124 @@ body {
   border-radius: 10px;
   width: 10rem;
   height: 1.25rem;
+  font-size: 15px;
 }
 
 #navbar {
   display: flex;
   justify-content: space-evenly;
   color: black;
+  font-size: 17px;
+  text-decoration: none;
+}
+
+.navlinks {
+  color: black;
+  text-decoration: none;
+  border: 2px solid black;
+  border-radius: 25px;
+  padding: 0.45rem;
 }
 
 #avatar{
+  vertical-align: middle;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
-  width: 75px;
-  height: 75px;
+  padding-left: 20px;
+  position: fixed;
+  top: 30px;
+  left: 7px;
 }
 
-.search {
-  /* display: flex;
-  justify-content: right; 
-  padding-top: 1.5%;
-  padding-right: 2%; */
+#search {
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  border-radius: 25px;
+  width: 18rem;
+  height: 1.75rem;
+  margin-top: 20px;
+}
+
+#searchtext{
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  margin-top: 28px;
+  margin-right: 6px;
+  margin-bottom: 30px;
+}
+
+#bookcards{
+  padding-top: 3rem;
+  display: grid;
+  margin: auto;
+  margin-right: 50px;
+  margin-top: 60px;
+  margin-left: 50px;
+  margin-bottom: 50px;
+  grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+  grid-gap: 10px;
+  padding: 30px 10px;
+  overflow: visible;
+  width: 300px;
+  height: 300px;
   border-radius: 10px;
-  /* width: 10rem;
-  height: 1.25rem; */
+  box-shadow: 0px 10px 15px 0px rgba(233, 240, 239, 0.413);
+  border-color:rgb(233, 240, 239);
+  font-size: 15px;
+  background-color: #14141345;;
+  text-align: center;
+  float: left;
+  color:rgb(255, 255, 255);
+}
+
+#bookimage {
+  text-align: inherit;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  
+}
+
+#logout{
+  position:fixed;
+  right:10px;
+  top:7px;
+}
+
+#username {
+  position: fixed;
+  top: 10px;
+  left: 7px;
+  text-align: left;
 }
 
 #bookcard{
- 
+  padding-top: 3rem;
+  display: grid;
+  margin: auto;
+  margin-right: 50px;
+  margin-top: 60px;
+  margin-left: 50px;
+  margin-bottom: 50px;
+  grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+  grid-gap: 10px;
+  padding: 30px 10px;
+  overflow: visible;
+  width: 1000px;
+  height: 600px;
+  border-radius: 10px;
+  box-shadow: 0px 10px 15px 0px rgba(233, 240, 239, 0.413);
+  border-color:rgb(233, 240, 239);
+  font-size: 15px;
+  background-color: #14141345;;
+  text-align: center;
+  float: left;
+  color:rgb(255, 255, 255);
+}
+
+#discussion {
+
 }
