--- a/client/src/index.css
+++ b/client/src/index.css
@@ -98,10 +98,12 @@ body {
 
 #navbar {
   display: flex;
-  justify-content: space-evenly;
+  /* justify-content: space-evenly; */
   color: black;
   font-size: 17px;
   text-decoration: none;
+  padding-left: 15px;
+  padding-bottom: 20px;
 }
 
 .navlinks {
@@ -110,6 +112,7 @@ body {
   border: 2px solid black;
   border-radius: 25px;
   padding: 0.45rem;
+  margin-right: 20px;
 }
 
 #avatar{
@@ -188,29 +191,35 @@ body {
 }
 
 #bookcard{
-  padding-top: 3rem;
-  display: grid;
-  margin: auto;
+  padding-top: 10rem;
+  padding-bottom: 10rem;
   margin-right: 50px;
-  margin-top: 60px;
+  margin-top: 70px;
   margin-left: 50px;
   margin-bottom: 50px;
-  grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
-  grid-gap: 10px;
-  padding: 30px 10px;
-  overflow: visible;
-  width: 1000px;
-  height: 600px;
+  padding: 20px 20px;
+  width: 90%;
+  height: 10%;
   border-radius: 10px;
   box-shadow: 0px 10px 15px 0px rgba(233, 240, 239, 0.413);
   border-color:rgb(233, 240, 239);
   font-size: 15px;
   background-color: #14141345;;
-  text-align: center;
-  float: left;
+  margin: auto;
   color:rgb(255, 255, 255);
+  line-height: 1.7;
 }
 
 #discussion {
-
+  margin-right: 50px;
+  margin-top: 60px;
+  margin-left: 50px;
+  margin-bottom: 50px;
+  width: 90%;
+  height: 20%;
+  border-radius: 10px;
+  box-shadow: 0px 10px 15px 0px rgba(233, 240, 239, 0.413);
+  border-color:rgb(233, 240, 239);
+  font-size: 15px;
+  background-color: #14141345;;
 }
