--- a/client/src/index.css
+++ b/client/src/index.css
@@ -26,6 +26,7 @@ body {
   min-height: 100%;
   width: 100%;
   background-attachment: fixed;
+  padding-bottom: 5%;
 
 }
 
@@ -116,12 +117,12 @@ body {
 }
 
 #avatar{
-  vertical-align: middle;
+  /* vertical-align: middle; */
   width: 50px;
   height: 50px;
   border-radius: 50%;
   padding-left: 20px;
-  position: fixed;
+  position: absolute;
   top: 30px;
   left: 7px;
 }
@@ -178,13 +179,13 @@ body {
 }
 
 #logout{
-  position:fixed;
+  position:absolute;
   right:10px;
   top:7px;
 }
 
 #username {
-  position: fixed;
+  position: absolute;
   top: 10px;
   left: 7px;
   text-align: left;
@@ -210,11 +211,33 @@ body {
   line-height: 1.7;
 }
 
-#discussion {
+#summary {
+ width: 40%;
+}
+
+#disscard {
   margin-right: 50px;
   margin-top: 60px;
   margin-left: 50px;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
+  width: 90%;
+  height: 20%;
+  padding: 10px 10px;
+  border-radius: 10px;
+  box-shadow: 0px 10px 15px 0px rgba(233, 240, 239, 0.413);
+  border-color:rgb(233, 240, 239);
+  font-size: 15px;
+  background-color: #14141345;;
+  padding-bottom: 2%;
+  text-align: center;
+}
+
+#comment {
+  margin-right: 50px;
+  margin-top: 10px;
+  margin-left: 50px;
+  margin-bottom: 20px;
+  padding: 10px 10px;
   width: 90%;
   height: 20%;
   border-radius: 10px;
@@ -223,3 +246,55 @@ body {
   font-size: 15px;
   background-color: #14141345;;
 }
+
+#commenttext{
+text-align: left;
+}
+
+#subject{
+  text-align: center;
+}
+
+#subjecttext{
+  border-radius: 10px;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  width: 15rem;
+  height: 1.75rem;
+}
+
+#body{
+  text-align: center;
+}
+
+#bodytext{
+  border-radius: 10px;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  width: 20rem;
+  height: 7rem;
+}
+
+#dissbutton{
+  border-radius: 25px;
+  padding: 5px;
+  width: 120px;
+  height: 30px;
+  background-color: #FAF9F6;
+  display: flex;
+  justify-content: center;
+  margin: auto;
+}
+
+#commentbox {
+  border-radius: 10px;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  width: 20rem;
+  height: 5rem;
+
+}
+
