started followbooks render page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -295,6 +295,13 @@ text-align: left;
   justify-content: center;
   width: 20rem;
   height: 5rem;
-
 }
 
+#hometext {
+  text-align: center;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  margin-top: 12%;
+  width: 45%;
+}
